# zwolf

./: Makefile  README.md
3d/: tunken_clip.scad  zwolf-ls0.step  zwolf.scad
examples/: counter.asm
host/howl/linux/: Makefile  howl.c
host/howl/rp2040/: CMakeLists.txt  Makefile  howl.c
soc/: Makefile  bsram.v  i2c.v  spi.v  zwolf_cpu.v  zwolf_mcu.v
soc/boards/: ls2.pcf  obst_v0.lpf  winzig.pcf
soc/test/: tb_i2c.v
soc_bounty/: Makefile  README  constraints.py  ls2.pcf  tb_zwolf_soc.v  tb_zwolf_soc.vcd  zwolf_soc.v
tools/: asm.py  b2h.py
vm/: zwolf.c
vm/include/: target.h  zwolf.h
zwlib/: function.zw  i2c.zw
